src/objects/Exam_Schedule__c.object
<CustomObject>
    <description>Shows an available time and place for an exam and maximum capacity.</description>
    <fields>
        <fullName>Enrollment__c</fullName>
        <inlineHelpText>Number of exams scheduled for this date/time</inlineHelpText>
        <label>Enrollment</label>
        <summaryForeignKey>Exam__c.Exam_Schedule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Exam_Date__c</fullName>
        <inlineHelpText>Date that the exam is offered</inlineHelpText>
        <label>Exam Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exam_Location_Address__c</fullName>
        <inlineHelpText>Physical address of testing site</inlineHelpText>
        <label>Exam Location Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exam_Location__c</fullName>
        <inlineHelpText>Location of Exam</inlineHelpText>
        <label>Exam Location</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Capacity__c</fullName>
        <inlineHelpText>Maximum number of attendees for an exam</inlineHelpText>
        <label>Maximum Capacity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seats_Available__c</fullName>
        <formula>Maximum_Capacity__c  -  Enrollment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of seats still available for exam</inlineHelpText>
        <label>Seats Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_of_Exam__c</fullName>
        <inlineHelpText>Time that the Exam is being offered</inlineHelpText>
        <label>Time of Exam</label>
        <type>Time</type>
    </fields>
    <label>Exam Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Time_of_Exam__c</columns>
        <columns>Exam_Date__c</columns>
        <columns>Exam_Location__c</columns>
        <columns>Exam_Location_Address__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Exam_Schedules_2019</fullName>
        <columns>NAME</columns>
        <columns>Exam_Date__c</columns>
        <columns>Exam_Location__c</columns>
        <columns>Exam_Location_Address__c</columns>
        <columns>Maximum_Capacity__c</columns>
        <columns>Seats_Available__c</columns>
        <columns>Time_of_Exam__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Exam_Date__c</field>
            <operation>lessThan</operation>
            <value>12/31/2019</value>
        </filters>
        <filters>
            <field>Exam_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2019</value>
        </filters>
        <label>Exam Schedules 2019</label>
    </listViews>
    <nameField>
        <label>Exam Schedule</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exam Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>